# vespagent

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
evals/: README.md
prompts/: challenger.md  facilitator.md  modeler.md
src/vespagent/: __init__.py
src/vespagent/application/: __init__.py  orchestration.py
src/vespagent/common/: __init__.py
src/vespagent/domain/: __init__.py  base.py  exceptions.py  model.py  ports.py  roles.py  session.py
src/vespagent/domain/model/: __init__.py  commands.py  events.py  exceptions.py  repository.py  root.py
src/vespagent/infrastructure/: __init__.py
src/vespagent/infrastructure/agents/: __init__.py  facilitator.py  modeler.py
src/vespagent/infrastructure/export/: __init__.py
src/vespagent/infrastructure/render/: __init__.py
src/vespagent/infrastructure/store/: __init__.py
src/vespagent/presentation/: __init__.py  cli.py
src/vespagent/prompts/: __init__.py  boundary_spotter.md  facilitator.md  language_guardian.md  modeler.md
src/vespagent/wiring/: __init__.py  config.py  factories.py
tests/application/: test_orchestration.py
tests/domain/: test_session.py
tests/domain/model/: test_commands.py  test_domain_model.py  test_events.py
tests/infrastructure/agents/: test_facilitator.py  test_modeler.py
